Add support for resource pack ordering!