@@ -3,8 +3,6 @@ package com.yungnickyoung.minecraft.paxi.mixin;
 import com.google.common.base.Functions;
 import com.google.common.collect.ImmutableList;
 import com.yungnickyoung.minecraft.paxi.PaxiRepositorySource;
-import com.yungnickyoung.minecraft.paxi.util.IPaxiSourceProvider;
-import net.fabricmc.fabric.impl.resource.loader.ModResourcePackCreator;
 import net.minecraft.server.packs.repository.Pack;
 import net.minecraft.server.packs.repository.PackRepository;
 import net.minecraft.server.packs.repository.RepositorySource;
@@ -22,10 +20,10 @@ import java.util.stream.Stream;
 /**
  * Overwrites the vanilla method for building a list of enabled packs.
  * Should completely preserve vanilla behavior while adding Paxi packs separately in a specific order
- * as determined by the user's datapack_load_order.json.
+ * as determined by the user's load order json.
  */
 @Mixin(PackRepository.class)
-public abstract class MixinPackRepository {
+public abstract class MixinPackRepositoryForge {
     @Shadow
     private Map<String, Pack> available;
 
@@ -39,16 +37,11 @@ public abstract class MixinPackRepository {
     }
 
     @Inject(at=@At("HEAD"), method="rebuildSelected", cancellable = true)
-    private void buildEnabledProfiles(Collection<String> enabledNames, CallbackInfoReturnable<List<Pack>> cir) {
+    private void paxi_buildEnabledProfilesForge(Collection<String> enabledNames, CallbackInfoReturnable<List<Pack>> cir) {
         // Fetch Paxi pack repository source
-        Optional<ModResourcePackCreator> moddedPackRepositorySource = this.sources.stream()
-                .filter(provider -> provider instanceof ModResourcePackCreator)
-                .findFirst()
-                .map(repositorySource -> (ModResourcePackCreator) repositorySource);
-        Optional<RepositorySource> paxiRepositorySource = Optional.empty();
-        if (moddedPackRepositorySource.isPresent()) {
-            paxiRepositorySource = Optional.of(((IPaxiSourceProvider) moddedPackRepositorySource.get()).getPaxiSource());
-        }
+        Optional<RepositorySource> paxiRepositorySource = this.sources.stream()
+                .filter(provider -> provider instanceof PaxiRepositorySource)
+                .findFirst();
 
         // List of all packs to be marked as enabled
         List<Pack> allEnabledPacks = this.getAvailablePacks(enabledNames).collect(Collectors.toList());
@@ -60,9 +53,8 @@ public abstract class MixinPackRepository {
         // We must gather Paxi packs separately because vanilla uses a TreeMap to store all packs, so they are
         // stored lexicographically, but for Paxi we need them to be enabled in a specific order
         // (determined by the user's datapack_load_order.json)
-        if (paxiRepositorySource.isPresent() && ((PaxiRepositorySource)paxiRepositorySource.get()).hasPacks()) {
-            paxiPacks.addAll(this.getAvailablePacks(((PaxiRepositorySource) paxiRepositorySource.get()).unorderedPaxiPacks).toList());
-            paxiPacks.addAll(this.getAvailablePacks(((PaxiRepositorySource) paxiRepositorySource.get()).orderedPaxiPacks).toList());
+        if (paxiRepositorySource.isPresent() && ((PaxiRepositorySource)paxiRepositorySource.get()).orderedPaxiPacks.size() > 0) {
+            paxiPacks = this.getAvailablePacks(((PaxiRepositorySource)paxiRepositorySource.get()).orderedPaxiPacks).collect(Collectors.toList());
             allEnabledPacks.removeAll(paxiPacks);
         }
 
